package br.com.estetica.automotiva.model;

public enum Role {
    CLIENTE,
    GESTOR
}
