package br.com.estetica.automotiva.model;

public enum StatusAgendamento {
    AGENDADO,
    CANCELADO,
    CONCLUIDO
}
